--- a/templet/baoding/information_list.html
+++ b/templet/baoding/information_list.html
@@ -24,7 +24,7 @@
                                     </li>
                                     <div class="clear"></div>
                                 </ul>
-                                <p>{$vo.brief|msubstr:"0":'100'}</p>
+                                <p style="height:70px;display:block;">{$vo.brief|msubstr:"0":'86'}</p>
                                 <p class="gengd">
                                     <a href="{spUrl c=$vo.tpl id=$vo.id}">READ MORE</a>
                                 </p>
