--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -76,6 +76,10 @@
 					</div>
 
 					<li>
+						<a href="{spUrl c=admin a=guestbook}" {$curr_bm}><span class="f_system">留言查看</span></a>
+					</li>
+
+					<li>
 						<a href="{spUrl c=admin a=cook do=week year=$cook_year week={$cook_week}}" {$curr_cook}>
 							<span class="f_system">食谱管理</span>
 						</a>
