--- a/templet/fenyuan/index.html
+++ b/templet/fenyuan/index.html
@@ -263,5 +263,51 @@ $(function() {
             <div class="clear"></div>
         </div>
     </div>
+    <!-- <div id="box-kefu">
+        <div class="kefu-close"></div>
+        <div class="kefu-open">
+            <div>
+            <ul>
+                <li><a href="http://wpa.qq.com/msgrd?v=3&uin=435690026&site=qq&menu=yes" target="_blank"><i class="qq"></i>在线咨询1</a></li>
+                <li><a href="http://wpa.qq.com/msgrd?v=3&uin=435690026&site=qq&menu=yes" target="_blank"><i class="qq"></i>在线咨询2</a></li>
+                <li><a href="http://wpa.qq.com/msgrd?v=3&uin=435690026&site=qq&menu=yes" target="_blank"><i class="qq"></i>在线咨询3</a></li>
+                <li><a href="{spUrl c=ydfc_yzxx tid=61}" target="_blank"><i class="txt"></i>咨询留言</a></li>
+            </ul>
+            </div>
+            <a href="javascript:;" class="close">关闭</a>
+        </div>
+    </div> -->
+    <script>var online= new Array();</script>
+    <script src="http://webpresence.qq.com/getonline?Type=1&645481746:1712816412:645481746:"></script>
+    <script>
+    (function($){
+        for (var i=0; i<online.length; i++) {
+            if (online[i]) jQuery("#box-kefu .qq").eq(i).addClass("online");
+        }
+        var _open = $("#box-kefu").find(".kefu-open"),
+            _close = $("#box-kefu").find(".kefu-close");
+        _open.find("a").hover(function(){
+            $(this).stop(true,true).animate({ paddingLeft:20 },200).find("i").stop(true,true).animate({ left:75 },200);
+        },function(){
+            $(this).stop(true,true).animate({ paddingLeft:35 },200).find("i").stop(true,true).animate({ left:10 },200);
+        });
+        
 
+        _open.find(".close").click(function(){
+            _open.animate({ width:148 },200,function(){
+                _open.animate({ width:0 },200,function(){
+                    _close.animate({ width:34 },200);
+
+                });
+            });
+        });
+        _close.click(function(){
+            _close.animate({ width:44 },200,function(){
+                _close.animate({ width:0 },200,function(){
+                    _open.animate({ width:138 },200);
+                });
+            });
+        });
+    })(jQuery)
+    </script>
 {/block}
