--- a/tplv2/admin/system.html
+++ b/tplv2/admin/system.html
@@ -34,7 +34,7 @@
 					   <td class="c_input"><input type="text" name="val[site_titlepre]" value="{$conf.site_titlepre}" /></td>
 				   </tr>
 				   <tr>
-				       <td class="t_title">备案号</td>
+				       <td class="t_title">客服QQ</td>
 					   <td class="c_input"><input type="text" name="val[site_icp]" value="{$conf.site_icp}" /></td>
 				   </tr>
 				   <tr>
