--- a/tplv2/admin/cook_week.html
+++ b/tplv2/admin/cook_week.html
@@ -33,6 +33,13 @@
                 <div style="float: left;height:33px;line-height: 33px;padding-left: 10px;">{$week_days.1}-{$week_days.5}</div>
                 <a class="btn_common" style="line-height: 33px;" href="{spUrl c=admin a=cook do=week year=$cook_year week=$nextweek}">下一周</a>
                 <div class="clear"></div>
+                <div style="width:300px;margin-top: 20px;">
+                    <p style="color:red;">添加说明：</p>
+                    <p>点击任意表格进行添加</p>
+                    <p>标注添加方法：</p>
+                    <p>在表格中添加 { 这里写标注营养成分即可 }</p>
+                    <p>例：蛋糕，鸡蛋 { 蛋白质丰富 }</p>
+                </div>
             </div>
             <table width="800" height="650" border="2" id="cook" bordercolor="#dfdfdf">
                 <tr>
