--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -90,11 +90,11 @@
 					</div>
 
 			        <li>
-			        	<a href="{spUrl c=admin a=adUnit}" {$curr_adUnit}><span class="f_ad">广告管理</span></a>
+			        	<a href="{spUrl c=admin a=adUnit}" {$curr_adUnit}><span class="f_ad">图片管理</span></a>
 			        </li>
 			        <div {$curr_addisplay}>
-			            <a href="{spUrl c=admin a=adUnit}" {$curr_aadUnit}>广告位管理</a>
-			            <a href="{spUrl c=admin a=adContent}" {$curr_aadlist}>广告管理</a>
+			            <a href="{spUrl c=admin a=adUnit}" {$curr_aadUnit}>图片位管理</a>
+			            <a href="{spUrl c=admin a=adContent}" {$curr_aadlist}>图片管理</a>
 			        </div>
 
 			        <li><a href="{spUrl c=admin a=user}" {$curr_user}><span class="f_user">用户管理</span></a>
