--- a/tplv2/admin/index.html
+++ b/tplv2/admin/index.html
@@ -9,7 +9,7 @@
 				 </tr>
 				 <tr>
 				     <td>程序版本：</td>
-					 <td>{$yb.version} <span id="encodeversion">{$ybsoftencode}</span> | <span id="checkVersion"><a href="javascript:queryVersion()">[检查更新]</a></span></td>
+					 <td>{$yb.version} <span id="encodeversion">{$ybsoftencode}</span> <!-- | <span id="checkVersion"><a href="javascript:queryVersion()">[检查更新]</a></span> --></td>
 				</tr>
 				<tr>
 				    <td>联系方式：</td>
