--- a/tplv2/admin/ad_unit.html
+++ b/tplv2/admin/ad_unit.html
@@ -3,7 +3,7 @@
 <div id="content">
 
     <div class="main">
-	    <input class="btn_common"   type="button" value="创建广告位" id="ad_add_show" />
+	    <input class="btn_common"   type="button" value="创建图片位" id="ad_add_show" />
 	    <input class="btn_common"  type="button" value="刷新" id="ad_refresh" />
 		<div class="clear"></div>
 	</div>
@@ -14,30 +14,30 @@
 	    <div class="con_system">
 		       <table width="100%" cellpadding="0" cellspacing="0" border="0" class="table_padding">
 			      <tr>
-				      <td width="80" class="t_title">广告位标题</td>
+				      <td width="80" class="t_title">图片位标题</td>
                       <td class="c_input"><input class="textipt" type="text"  name="title" /></td>
                   </tr>
 				  <tr>
-                        <td class="t_title">广告描述</td>
+                        <td class="t_title">图片描述</td>
                         <td class="c_input"><input type="text" name="adesc" /></td>
                     </tr>
-                    <tr>
-                        <td class="t_title">广告位截图</td>
+                   <!--  <tr>
+                        <td class="t_title">图片位截图</td>
                         <td class="c_input">
                             tpl/admin/style/ad_unit/<input type="text"  name="img" />请上传至目录并只输入文件名称
                         </td>
-                    </tr>
+                    </tr> -->
                     <tr>
-                        <td class="t_title">排序</td>
+                        <td class="t_title">所属用户</td>
                         <td class="c_input"><input type="text"  name="orders" value="{$dis.id+1}" /></td>
                     </tr>
-                    <tr>
+                   <!--  <tr>
                         <td class="t_title">是否启用</td>
                         <td class="c_radio">
 						<label><input type="radio" name="is_show" id="is_show" value="1" checked="checked" />启用</label>
                         <label><input type="radio" name="is_show" id="is_show" value="0" />停用</label>
                       </td>
-                    </tr>
+                    </tr> -->
 			  </table>
 			  
 			  <div class="btn_area">
@@ -54,12 +54,12 @@
 	<form id="form1" name="form1" method="post" action="">   
 		<table width="100%" border="0" cellspacing="0" cellpadding="0" class="table_model">
                         <tr class="table_title">
-						    <th width="60" class="m_title">广告位ID</th>
-                            <th>广告位名称</th>
+						    <th width="60" class="m_title">图片位ID</th>
+                            <th>图片位名称</th>
 							<th>描述</th>
-                            <th>排序</th>
-                            <th>系统</th>
-                            <th>广告位状态</th>
+                            <th>所属用户</th>
+                           <!--  <th>系统</th> -->
+                         <!--    <th>图片位状态</th> -->
 							<th>操作</th>
                         </tr>
                         {foreach from=$adUnit_list item=d}
@@ -68,13 +68,13 @@
                             <td>{$d.title}</td>
 							<td>{$d.adesc}</td>
                             <td>{$d.orders}</td>
-                            <td>{if $d.system==1}是{else}否{/if}</td>
+                          <!--   <td>{if $d.system==1}是{else}否{/if}</td>
                             <td class="fun_con">
 
 							    {if $d.is_show==1}<a class="f_open" href="{spUrl c=admin a=adUnit flag=close en_show=0 id=$d.id}" title="开启中,点击关闭">开启中,点击关闭</a>{else}<a class="f_close" href="{spUrl c=admin a=adUnit flag=close en_show=1 id=$d.id}" title="关闭中,点击开启">关闭中,点击开启</a>{/if}
-							</td>
+							</td> -->
 							<td class="fun_con">
-								<a class="f_look" href="{spUrl c=admin a=adUnit show=$d.id}" title="查看广告位">查看广告位</a>
+								<a class="f_look" href="{spUrl c=admin a=adUnit show=$d.id}" title="查看图片位">查看图片位</a>
 							    {if $d.system!=1}<a class="f_edit" href="{spUrl c=admin a=adUnit edit=$d.id}" title="编辑">编辑</a><a class="f_delete" href="{spUrl c=admin a=adUnit del=$d.id}" onclick="return(confirm('确定删除?'))" title="删除">删除</a>{else}{/if}
 							</td>
                         </tr>
